@@ -29,6 +29,7 @@ import org.eclipse.jetty.security.ConstraintSecurityHandler;
 import org.eclipse.jetty.security.LoginService;
 import org.eclipse.jetty.security.SecurityHandler;
 import org.eclipse.jetty.security.authentication.BasicAuthenticator;
+import org.eclipse.jetty.server.ConnectionFactory;
 import org.eclipse.jetty.server.Connector;
 import org.eclipse.jetty.server.HttpConfiguration;
 import org.eclipse.jetty.server.HttpConnectionFactory;
@@ -61,6 +62,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.channels.ServerSocketChannel;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.cert.Certificate;
@@ -74,6 +76,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.Executor;
 
+import static com.google.common.base.MoreObjects.firstNonNull;
 import static com.google.common.base.Preconditions.checkState;
 import static java.lang.Math.toIntExact;
 import static java.lang.String.format;
@@ -152,7 +155,14 @@ public class HttpServer
             http2c.setInitialStreamRecvWindow(toIntExact(config.getHttp2InitialStreamReceiveWindowSize().toBytes()));
             http2c.setMaxConcurrentStreams(config.getHttp2MaxConcurrentStreams());
             http2c.setInputBufferSize(toIntExact(config.getHttp2InputBufferSize().toBytes()));
-            httpConnector = new ServerConnector(server, null, null, null, acceptors == null ? -1 : acceptors, selectors == null ? -1 : selectors, http1, http2c);
+            httpConnector = createServerConnector(
+                    httpServerInfo.getHttpChannel(),
+                    server,
+                    null,
+                    firstNonNull(acceptors, -1),
+                    firstNonNull(selectors, -1),
+                    http1,
+                    http2c);
             httpConnector.setName("http");
             httpConnector.setPort(httpServerInfo.getHttpUri().getPort());
             httpConnector.setIdleTimeout(config.getNetworkMaxIdleTime().toMillis());
@@ -186,7 +196,14 @@ public class HttpServer
 
             Integer acceptors = config.getHttpsAcceptorThreads();
             Integer selectors = config.getHttpsSelectorThreads();
-            httpsConnector = new ServerConnector(server, null, null, null, acceptors == null ? -1 : acceptors, selectors == null ? -1 : selectors, sslConnectionFactory, new HttpConnectionFactory(httpsConfiguration));
+            httpsConnector = createServerConnector(
+                    httpServerInfo.getHttpsChannel(),
+                    server,
+                    null,
+                    firstNonNull(acceptors, -1),
+                    firstNonNull(selectors, -1),
+                    sslConnectionFactory,
+                    new HttpConnectionFactory(httpsConfiguration));
             httpsConnector.setName("https");
             httpsConnector.setPort(httpServerInfo.getHttpsUri().getPort());
             httpsConnector.setIdleTimeout(config.getNetworkMaxIdleTime().toMillis());
@@ -220,13 +237,27 @@ public class HttpServer
                 sslContextFactory.setKeyStorePassword(config.getKeystorePassword());
                 sslContextFactory.setSecureRandomAlgorithm(config.getSecureRandomAlgorithm());
                 SslConnectionFactory sslConnectionFactory = new SslConnectionFactory(sslContextFactory, "http/1.1");
-                adminConnector = new ServerConnector(server, adminThreadPool, null, null, 0, -1, sslConnectionFactory, new HttpConnectionFactory(adminConfiguration));
+                adminConnector = createServerConnector(
+                        httpServerInfo.getAdminChannel(),
+                        server,
+                        adminThreadPool,
+                        0,
+                        -1,
+                        sslConnectionFactory,
+                        new HttpConnectionFactory(adminConfiguration));
             }
             else {
                 HttpConnectionFactory http1 = new HttpConnectionFactory(adminConfiguration);
                 HTTP2CServerConnectionFactory http2c = new HTTP2CServerConnectionFactory(adminConfiguration);
                 http2c.setMaxConcurrentStreams(config.getHttp2MaxConcurrentStreams());
-                adminConnector = new ServerConnector(server, adminThreadPool, null, null, -1, -1, http1, http2c);
+                adminConnector = createServerConnector(
+                        httpServerInfo.getAdminChannel(),
+                        server,
+                        adminThreadPool,
+                        -1,
+                        -1,
+                        http1,
+                        http2c);
             }
 
             adminConnector.setName("admin");
@@ -447,5 +478,19 @@ public class HttpServer
             }
         }
         return certificates.build();
+    }
+
+    private static ServerConnector createServerConnector(
+            ServerSocketChannel channel,
+            Server server,
+            Executor executor,
+            int acceptors,
+            int selectors,
+            ConnectionFactory... factories)
+            throws IOException
+    {
+        ServerConnector connector = new ServerConnector(server, executor, null, null, acceptors, selectors, factories);
+        connector.open(channel);
+        return connector;
     }
 }
