@@ -15,15 +15,18 @@
  */
 package io.airlift.http.server;
 
+import com.google.common.annotations.VisibleForTesting;
 import io.airlift.node.NodeInfo;
 
 import javax.inject.Inject;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.net.ServerSocket;
+import java.net.InetAddress;
+import java.net.InetSocketAddress;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.nio.channels.ServerSocketChannel;
 
 public class HttpServerInfo
 {
@@ -34,38 +37,48 @@ public class HttpServerInfo
     private final URI adminUri;
     private final URI adminExternalUri;
 
+    private final ServerSocketChannel httpChannel;
+    private final ServerSocketChannel httpsChannel;
+    private final ServerSocketChannel adminChannel;
+
     @Inject
     public HttpServerInfo(HttpServerConfig config, NodeInfo nodeInfo)
     {
         if (config.isHttpEnabled()) {
-            httpUri = buildUri("http", nodeInfo.getInternalAddress(), config.getHttpPort());
+            httpChannel = createChannel(nodeInfo.getBindIp(), config.getHttpPort(), config.getHttpAcceptQueueSize());
+            httpUri = buildUri("http", nodeInfo.getInternalAddress(), port(httpChannel));
             httpExternalUri = buildUri("http", nodeInfo.getExternalAddress(), httpUri.getPort());
         }
         else {
+            httpChannel = null;
             httpUri = null;
             httpExternalUri = null;
         }
 
         if (config.isHttpsEnabled()) {
-            httpsUri = buildUri("https", nodeInfo.getInternalAddress(), config.getHttpsPort());
+            httpsChannel = createChannel(nodeInfo.getBindIp(), config.getHttpsPort(), config.getHttpAcceptQueueSize());
+            httpsUri = buildUri("https", nodeInfo.getInternalAddress(), port(httpsChannel));
             httpsExternalUri = buildUri("https", nodeInfo.getExternalAddress(), httpsUri.getPort());
         }
         else {
+            httpsChannel = null;
             httpsUri = null;
             httpsExternalUri = null;
         }
 
         if (config.isAdminEnabled()) {
+            adminChannel = createChannel(nodeInfo.getBindIp(), config.getAdminPort(), config.getHttpAcceptQueueSize());
             if (config.isHttpsEnabled()) {
-                adminUri = buildUri("https", nodeInfo.getInternalAddress(), config.getAdminPort());
+                adminUri = buildUri("https", nodeInfo.getInternalAddress(), port(adminChannel));
                 adminExternalUri = buildUri("https", nodeInfo.getExternalAddress(), adminUri.getPort());
             }
             else {
-                adminUri = buildUri("http", nodeInfo.getInternalAddress(), config.getAdminPort());
+                adminUri = buildUri("http", nodeInfo.getInternalAddress(), port(adminChannel));
                 adminExternalUri = buildUri("http", nodeInfo.getExternalAddress(), adminUri.getPort());
             }
         }
         else {
+            adminChannel = null;
             adminUri = null;
             adminExternalUri = null;
         }
@@ -101,13 +114,23 @@ public class HttpServerInfo
         return adminExternalUri;
     }
 
+    ServerSocketChannel getHttpChannel()
+    {
+        return httpChannel;
+    }
+
+    ServerSocketChannel getHttpsChannel()
+    {
+        return httpsChannel;
+    }
+
+    ServerSocketChannel getAdminChannel()
+    {
+        return adminChannel;
+    }
+
     private static URI buildUri(String scheme, String host, int port)
     {
-        // 0 means select a random port
-        if (port == 0) {
-            port = findUnusedPort();
-        }
-
         try {
             return new URI(scheme, null, host, port, null, null, null);
         }
@@ -116,10 +139,24 @@ public class HttpServerInfo
         }
     }
 
-    private static int findUnusedPort()
+    @VisibleForTesting
+    static int port(ServerSocketChannel channel)
     {
-        try (ServerSocket socket = new ServerSocket(0)) {
-            return socket.getLocalPort();
+        try {
+            return ((InetSocketAddress) channel.getLocalAddress()).getPort();
+        }
+        catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+    }
+
+    private static ServerSocketChannel createChannel(InetAddress address, int port, int acceptQueueSize)
+    {
+        try {
+            ServerSocketChannel channel = ServerSocketChannel.open();
+            channel.socket().setReuseAddress(true);
+            channel.socket().bind(new InetSocketAddress(address, port), acceptQueueSize);
+            return channel;
         }
         catch (IOException e) {
             throw new UncheckedIOException(e);
