@@ -23,6 +23,7 @@ import io.airlift.http.server.HttpServerBinder.HttpResourceBinding;
 import io.airlift.node.NodeInfo;
 import io.airlift.tracetoken.TraceTokenManager;
 import org.eclipse.jetty.security.LoginService;
+import org.eclipse.jetty.server.ServerConnector;
 
 import javax.annotation.Nullable;
 import javax.inject.Provider;
@@ -30,6 +31,7 @@ import javax.management.MBeanServer;
 import javax.servlet.Filter;
 import javax.servlet.Servlet;
 
+import java.lang.reflect.Field;
 import java.util.Map;
 import java.util.Set;
 
