@@ -29,7 +29,6 @@ import io.airlift.http.server.HttpServerBinder.HttpResourceBinding;
 import io.airlift.log.Logging;
 import io.airlift.node.NodeInfo;
 import io.airlift.tracetoken.TraceTokenManager;
-import io.airlift.units.Duration;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.BeforeSuite;
@@ -42,7 +41,6 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.net.ConnectException;
 import java.net.URI;
 import java.util.Base64;
 import java.util.concurrent.ExecutionException;
@@ -54,10 +52,13 @@ import static com.google.common.io.Resources.getResource;
 import static io.airlift.http.client.Request.Builder.prepareGet;
 import static io.airlift.http.client.StatusResponseHandler.createStatusResponseHandler;
 import static io.airlift.http.client.StringResponseHandler.createStringResponseHandler;
+import static io.airlift.http.server.TestHttpServerInfo.closeChannels;
 import static io.airlift.testing.Assertions.assertContains;
 import static io.airlift.testing.Assertions.assertInstanceOf;
+import static io.airlift.testing.Assertions.assertNotEquals;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
@@ -85,6 +86,7 @@ public class TestHttpServerProvider
         tempDir = Files.createTempDir().getCanonicalFile(); // getCanonicalFile needed to get around Issue 365 (http://code.google.com/p/guava-libraries/issues/detail?id=365)
         config = new HttpServerConfig()
                 .setHttpPort(0)
+                .setHttpsPort(0)
                 .setLogPath(new File(tempDir, "http-request.log").getAbsolutePath());
         nodeInfo = new NodeInfo("test");
         httpServerInfo = new HttpServerInfo(config, nodeInfo);
@@ -94,6 +96,7 @@ public class TestHttpServerProvider
     public void teardown()
             throws Exception
     {
+        closeChannels(httpServerInfo);
         try {
             if (server != null) {
                 server.stop();
@@ -102,6 +105,117 @@ public class TestHttpServerProvider
         finally {
             deleteRecursively(tempDir.toPath(), ALLOW_INSECURE);
         }
+    }
+
+    @Test
+    public void testConnectorDefaults()
+    {
+        assertTrue(config.isHttpEnabled());
+        assertNotNull(httpServerInfo.getHttpUri());
+        assertNotNull(httpServerInfo.getHttpExternalUri());
+        assertNotNull(httpServerInfo.getHttpChannel());
+        assertEquals(httpServerInfo.getHttpUri().getScheme(), httpServerInfo.getHttpExternalUri().getScheme());
+        assertEquals(httpServerInfo.getHttpUri().getPort(), httpServerInfo.getHttpExternalUri().getPort());
+        assertEquals(httpServerInfo.getHttpUri().getScheme(), "http");
+
+        assertFalse(config.isHttpsEnabled());
+        assertNull(httpServerInfo.getHttpsUri());
+        assertNull(httpServerInfo.getHttpsExternalUri());
+        assertNull(httpServerInfo.getHttpsChannel());
+
+        assertTrue(config.isAdminEnabled());
+        assertNotNull(httpServerInfo.getAdminUri());
+        assertNotNull(httpServerInfo.getAdminExternalUri());
+        assertNotNull(httpServerInfo.getAdminChannel());
+        assertEquals(httpServerInfo.getAdminUri().getScheme(), httpServerInfo.getAdminExternalUri().getScheme());
+        assertEquals(httpServerInfo.getAdminUri().getPort(), httpServerInfo.getAdminExternalUri().getPort());
+        assertEquals(httpServerInfo.getAdminUri().getScheme(), "http");
+
+        assertNotEquals(httpServerInfo.getHttpUri().getPort(), httpServerInfo.getAdminUri().getPort());
+    }
+
+    @Test
+    public void testHttpDisabled()
+            throws Exception
+    {
+        closeChannels(httpServerInfo);
+
+        config.setHttpEnabled(false);
+        httpServerInfo = new HttpServerInfo(config, nodeInfo);
+
+        assertNull(httpServerInfo.getHttpUri());
+        assertNull(httpServerInfo.getHttpExternalUri());
+        assertNull(httpServerInfo.getHttpChannel());
+
+        assertNull(httpServerInfo.getHttpsUri());
+        assertNull(httpServerInfo.getHttpsExternalUri());
+        assertNull(httpServerInfo.getHttpsChannel());
+
+        assertNotNull(httpServerInfo.getAdminUri());
+        assertNotNull(httpServerInfo.getAdminExternalUri());
+        assertNotNull(httpServerInfo.getAdminChannel());
+        assertEquals(httpServerInfo.getAdminUri().getScheme(), httpServerInfo.getAdminExternalUri().getScheme());
+        assertEquals(httpServerInfo.getAdminUri().getPort(), httpServerInfo.getAdminExternalUri().getPort());
+        assertEquals(httpServerInfo.getAdminUri().getScheme(), "http");
+    }
+
+    @Test
+    public void testAdminDisabled()
+            throws Exception
+    {
+        closeChannels(httpServerInfo);
+
+        config.setAdminEnabled(false);
+        httpServerInfo = new HttpServerInfo(config, nodeInfo);
+
+        assertNotNull(httpServerInfo.getHttpUri());
+        assertNotNull(httpServerInfo.getHttpExternalUri());
+        assertNotNull(httpServerInfo.getHttpChannel());
+        assertEquals(httpServerInfo.getHttpUri().getScheme(), httpServerInfo.getHttpExternalUri().getScheme());
+        assertEquals(httpServerInfo.getHttpUri().getPort(), httpServerInfo.getHttpExternalUri().getPort());
+        assertEquals(httpServerInfo.getHttpUri().getScheme(), "http");
+
+        assertNull(httpServerInfo.getHttpsUri());
+        assertNull(httpServerInfo.getHttpsExternalUri());
+        assertNull(httpServerInfo.getHttpsChannel());
+
+        assertNull(httpServerInfo.getAdminUri());
+        assertNull(httpServerInfo.getAdminExternalUri());
+        assertNull(httpServerInfo.getAdminChannel());
+    }
+
+    @Test
+    public void testHttpsEnabled()
+            throws Exception
+    {
+        closeChannels(httpServerInfo);
+
+        config.setHttpsEnabled(true);
+        httpServerInfo = new HttpServerInfo(config, nodeInfo);
+
+        assertNotNull(httpServerInfo.getHttpUri());
+        assertNotNull(httpServerInfo.getHttpExternalUri());
+        assertNotNull(httpServerInfo.getHttpChannel());
+        assertEquals(httpServerInfo.getHttpUri().getScheme(), httpServerInfo.getHttpExternalUri().getScheme());
+        assertEquals(httpServerInfo.getHttpUri().getPort(), httpServerInfo.getHttpExternalUri().getPort());
+        assertEquals(httpServerInfo.getHttpUri().getScheme(), "http");
+
+        assertNotNull(httpServerInfo.getHttpsUri());
+        assertNotNull(httpServerInfo.getHttpsExternalUri());
+        assertNotNull(httpServerInfo.getHttpsChannel());
+        assertEquals(httpServerInfo.getHttpsUri().getScheme(), httpServerInfo.getHttpsExternalUri().getScheme());
+        assertEquals(httpServerInfo.getHttpsUri().getPort(), httpServerInfo.getHttpsExternalUri().getPort());
+        assertEquals(httpServerInfo.getHttpsUri().getScheme(), "https");
+
+        assertNotNull(httpServerInfo.getAdminUri());
+        assertNotNull(httpServerInfo.getAdminExternalUri());
+        assertNotNull(httpServerInfo.getAdminChannel());
+        assertEquals(httpServerInfo.getAdminUri().getScheme(), httpServerInfo.getAdminExternalUri().getScheme());
+        assertEquals(httpServerInfo.getAdminUri().getPort(), httpServerInfo.getAdminExternalUri().getPort());
+        assertEquals(httpServerInfo.getAdminUri().getScheme(), "https");
+
+        assertNotEquals(httpServerInfo.getHttpUri().getPort(), httpServerInfo.getHttpsUri().getPort());
+        assertNotEquals(httpServerInfo.getHttpUri().getPort(), httpServerInfo.getAdminUri().getPort());
     }
 
     @Test
@@ -138,27 +252,6 @@ public class TestHttpServerProvider
 
             assertEquals(response.getStatusCode(), HttpServletResponse.SC_PAYMENT_REQUIRED);
             assertEquals(response.getStatusMessage(), "filtered");
-        }
-    }
-
-    @Test
-    public void testHttpIsDisabled()
-            throws Exception
-    {
-        config.setHttpEnabled(false);
-
-        createServer();
-        server.start();
-
-        try (HttpClient client = new JettyHttpClient(new HttpClientConfig().setConnectTimeout(new Duration(2.0, TimeUnit.SECONDS)))) {
-            StatusResponse response = client.execute(prepareGet().setUri(httpServerInfo.getHttpUri().resolve("/")).build(), createStatusResponseHandler());
-
-            if (response != null) { // TODO: this is a workaround for a bug in AHC (some race condition)
-                fail("Expected connection refused, got response code: " + response.getStatusCode());
-            }
-        }
-        catch (RuntimeException e) {
-            assertTrue(e.getCause() instanceof ConnectException, e.getCause().getClass() + " instanceof ConnectException");
         }
     }
 
@@ -297,6 +390,7 @@ public class TestHttpServerProvider
     private void createAndStartServer()
             throws Exception
     {
+        closeChannels(httpServerInfo);
         httpServerInfo = new HttpServerInfo(config, nodeInfo);
         createServer();
         server.start();
