@@ -1,6 +1,7 @@
 * 0.150
 
 - Upgrade to Jetty 9.4.7.RC0.
+- Prevent "Address already in use" for HTTP server.
 - Remove @Inject from Logger.
 - Add HTTP/2 input buffer size config.
 - Add support for monitoring the Jetty client shared thread pool.
